--- a/index.html
+++ b/index.html
@@ -1,303 +1,74 @@
 <html>
 <style>
-table,td,th{
-border-collapse:collapse;
-border:2px solid white;
-}
+	font{
+		style:clarendon;
+		}
+
 </style>
-<form>
-<center>
-<table style="background-color:lightblue;">
-<tr rowspan="2" align="center">
-<td style="border:none;" colspan="4"><b>Ticket Reservation</b></td>
-</tr>
-<tr   align="right">
-<td style="border:none;" colspan="4"><font color="green">* Mandatory</font></td>
-</tr>
-<tr>
-<td style="width:200px;"><b>Train No</b></td>
-<td style="width:200px;">2952</td>
-<td style="width:200px;"><b>Train Name</b></td>
-<td style="width:200px;">Mumbai Rajdhani</td>
-</tr>
-<tr>
-<td style="width:200px;"><b>From</b></td>
-<td style="width:200px;">NDLS</td>
-<td style="width:200px;"><b>To</b><b></b></td>
-<td style="width:200px;">BCT</td>
-</tr>
-<tr>
-<td style="width:200px;"><b>Date</b></td>
-<td style="width:200px;">02-Jul-2007</td>
-<td style="width:200px;"><b>Class</b></td>
-<td style="width:200px;">AC 2-tier sleeper(2A)</td>
-</tr>
-<tr>
-<td style="width:200px;"><b><label for="boarding">Boarding Point</label></b></td>
-<td style="width:200px;"><input type="text" name="boarding" id="boarding" placeholder="NDLS"></input></td>
-<td style="width:200px;"><b>Reservation Upto</b></td>
-<td style="width:200px;">BCT</td>
-</tr>
-<tr>
-<td style="width:200px;"><b><label for="quota">Quota</label></b></td>
-<td colspan="3" style="width:200px;">
-<input type="radio" name="quota" id="quota" value="General">General&emsp;&emsp;&emsp;</input>
-<input type="radio" name="quota" id="quota" value="Ladies">Ladies</input>
-</td>
-</tr>
-<tr rowspan="4" style="height:15px;"><td style="border:none;" ></td></tr>
-<tr>
-<td colspan="4" style="border:none;"><b>Passenger Details</b></td>
-</tr>
-<tr>
-<td style="border:none;"></td>
-<td colspan="4" style="border:none;"><b>1:</b>Select your Travel List</td>
-</tr>
-<tr>
-<td style="border:none;"></td>
-<td colspan="4" style="border:none;"><b>2:</b>Select Passengers from your Master list</td>
-</tr>
-</table>
-<table style="background-color:lightblue;">
-<tr>
-<td style="width:30px;" align="center">SNo.</td>
-<td style="width:170px;" align="center">Name</td>
-<td style="width:50px;" align="center">Age</td>
-<td style="width:75px;" align="center">Sex</td>
-<td style="width:160px;" align="center">Berth Preference</td>
-<td style="width:150px;" align="center">Food Preference</td>
-<td style="width:140px;" align="center">Senior Citizen</td>
-</tr>
-<tr>
-<td align="center"><label for="1">1</label></td>
-<td><input type="text" name="1"></input></td>
-<td><input style="width:50px;" type="text" name="1"></input></td>
-<td>
-<select style="width:75px;" placeholder="Select">
-<option value="male">Male</option>
-<option value="female">Female</option>
-<option value="Other">Other</option>
-</select>
-</td>
-<td>
-<select style="width:160px;" placeholder="Select">
-<option value="side lower">Side lower</option>
-<option value="Side upper">Side upper</option>
-<option value="Upper">Upper</option>
-<option value="Lower">Lower</option>
-<option value="Middle">Middle</option>
-</select>
-</td>
-<td>
-<select style="width:160px;" placeholder="Select">
-<option value="Non veg">Non Veg</option>
-<option value="Veg">Veg</option>
-</select>
-</td>
-<td align="center">
-<input  type="checkbox" >
-</td>
-</tr>
-<tr>
-<td align="center"><label for="1">2</label></td>
-<td><input type="text" name="1"></input></td>
-<td><input style="width:50px;" type="text" name="1"></input></td>
-<td>
-<select style="width:75px;" placeholder="Select">
-<option value="male">Male</option>
-<option value="female">Female</option>
-<option value="Other">Other</option>
-</select>
-</td>
-<td>
-<select style="width:160px;" placeholder="Select">
-<option value="side lower">Side lower</option>
-<option value="Side upper">Side upper</option>
-<option value="Upper">Upper</option>
-<option value="Lower">Lower</option>
-<option value="Middle">Middle</option>
-</select>
-</td>
-<td>
-<select style="width:160px;" placeholder="Select">
-<option value="Non veg">Non Veg</option>
-<option value="Veg">Veg</option>
-</select>
-</td>
-<td align="center">
-<input  type="checkbox" >
-</td>
-</tr>
-<tr>
-<td align="center"><label for="1">3</label></td>
-<td><input type="text" name="1"></input></td>
-<td><input style="width:50px;" type="text" name="1"></input></td>
-<td>
-<select style="width:75px;" placeholder="Select">
-<option value="male">Male</option>
-<option value="female">Female</option>
-<option value="Other">Other</option>
-</select>
-</td>
-<td>
-<select style="width:160px;" placeholder="Select">
-<option value="side lower">Side lower</option>
-<option value="Side upper">Side upper</option>
-<option value="Upper">Upper</option>
-<option value="Lower">Lower</option>
-<option value="Middle">Middle</option>
-</select>
-</td>
-<td>
-<select style="width:160px;" placeholder="Select">
-<option value="Non veg">Non Veg</option>
-<option value="Veg">Veg</option>
-</select>
-</td>
-<td align="center">
-<input  type="checkbox" >
-</td>
-</tr>
-<tr>
-<td align="center"><label for="1">4</label></td>
-<td><input type="text" name="1"></input></td>
-<td><input style="width:50px;" type="text" name="1"></input></td>
-<td>
-<select style="width:75px;" placeholder="Select">
-<option value="male">Male</option>
-<option value="female">Female</option>
-<option value="Other">Other</option>
-</select>
-</td>
-<td>
-<select style="width:160px;" placeholder="Select">
-<option value="side lower">Side lower</option>
-<option value="Side upper">Side upper</option>
-<option value="Upper">Upper</option>
-<option value="Lower">Lower</option>
-<option value="Middle">Middle</option>
-</select>
-</td>
-<td>
-<select style="width:160px;" placeholder="Select">
-<option value="Non veg">Non Veg</option>
-<option value="Veg">Veg</option>
-</select>
-</td>
-<td align="center">
-<input  type="checkbox" >
-</td>
-</tr>
-<tr>
-<td align="center"><label for="1">5</label></td>
-<td><input type="text" name="1"></input></td>
-<td><input style="width:50px;" type="text" name="1"></input></td>
-<td>
-<select style="width:75px;" placeholder="Select">
-<option value="male">Male</option>
-<option value="female">Female</option>
-<option value="Other">Other</option>
-</select>
-</td>
-<td>
-<select style="width:160px;" placeholder="Select">
-<option value="side lower">Side lower</option>
-<option value="Side upper">Side upper</option>
-<option value="Upper">Upper</option>
-<option value="Lower">Lower</option>
-<option value="Middle">Middle</option>
-</select>
-</td>
-<td>
-<select style="width:160px;" placeholder="Select">
-<option value="Non veg">Non Veg</option>
-<option value="Veg">Veg</option>
-</select>
-</td>
-<td align="center">
-<input  type="checkbox" >
-</td>
-</tr>
-<tr>
-<td align="center"><label for="1">6</label></td>
-<td><input type="text" name="1"></input></td>
-<td><input style="width:50px;" type="text" name="1"></input></td>
-<td>
-<select style="width:75px;" placeholder="Select">
-<option value="male">Male</option>
-<option value="female">Female</option>
-<option value="Other">Other</option>
-</select>
-</td>
-<td>
-<select style="width:160px;" placeholder="Select">
-<option value="side lower">Side lower</option>
-<option value="Side upper">Side upper</option>
-<option value="Upper">Upper</option>
-<option value="Lower">Lower</option>
-<option value="Middle">Middle</option>
-</select>
-</td>
-<td>
-<select style="width:160px;" placeholder="Select">
-<option value="Non veg">Non Veg</option>
-<option value="Veg">Veg</option>
-</select>
-</td>
-<td align="center">
-<input  type="checkbox" >
-</td>
-</tr>
-</table>
-<table style="background-color:lightblue;">
-<tr>
-<td colspan="4" style="width:812px; height:30px; color:red; border:none;"><input type="checkbox"><b>Consider for Auto Upgradation.</b></td>
-</tr>
-</table >
-<table style="background-color:lightblue; border:none;">
-<tr align="center">
-<td colspan="4" style="width:812px; color:orange; border:none;"><b>Photo ID card details</b></td>
-</tr>
-<tr>
-<td colspan="4" style="height:100px; width:812px;"><b>Please enter the photo identity card particulars of one of the passengers.Please ensure<br>that this passenger carries the same original identity card while travelling.If not this will<br>be treated as ticket less travelling.<br>Please enter only the serial number of your Photo-ID cards,without any special<br>characters like /,.,#.*, etc.For insurance,if your driving  licence number is E/T-<br>N/058/#A00649/2005 , please enter only A00649</b>
-</td>
-</tr>
-<tr>
-<td style="width:400px;">Photo Identity card holder*</td>
-<td>
-<select>
-<option>select<option>
-</select>
-</td>
-</tr>
-<tr>
-<td style="width:400px;">ID Card Type*</td>
-<td >
-<select style="width:200px";>
-<option>select<option>
-</select>
-</td>
-</tr>
-<tr>
-<td style="width:400px;">ID Card No*</td>
-<td >
-<input type="text"></input>
-</td>
-</tr>
-<tr>
-<td style="width:400px;">Issuing Authority*</td>
-<td >
-<input type="text"></input>
-</td>
-</tr>
-<tr align="right" style="height:50px;">
-<td colspan="2">
-<input type="submit" style="background-color:darkblue; color:white;" value="GO">&ensp;</input>
-<input type="submit" style="background-color:darkblue; color:white;" value="RESET">&ensp;</input>
-<input type="submit" style="background-color:darkblue; color:white;" value="REPLAN">&ensp;</input>
-</td>
-</tr>
-</table>
-</center>
-</form>
+	<body style="background-color:lightblue;">
+		<table align="center">
+			<tr>
+				<td><img src="photo.jpg" style="height:400px;width:400px; padding-right:40px;"></td>
+				<td><font style="clarendon" size="8">SAI DINESH B</font><br></td>
+			</tr>
+		</table>
+		<hr>
+		<table align="center">
+			<tr>
+				<td><font style="clarendon" size="6"><u>Educational Qualification</u><br><br></td>
+			</tr>
+			<tr>
+				<table align="center" border="1">
+					<th colspan="4"><font size="4">Grade</font></th>
+					<th><font size="4">School</font></th>
+					<th><font size="4">Place</font></th>
+					<th><font size="4">Percentage Obtained</font></th><br>
+					<tr>
+						<td colspan="4" style="padding-right:40px;"><strong>10th STD</strong></td>
+						<td style="padding:20px; padding-right:40px;"><strong>Counian Matric.Hr.Sec.School</strong></td>
+						<td style="padding-right:40px;"><strong>&emsp;&emsp;Kovilpatti</strong></td>
+						<td><strong>&emsp;&emsp;&emsp;96.0%</strong></td>
+					</tr>
+					<tr>
+						<td colspan="4" style="padding-right:40px;"><strong>12th STD</strong></td>
+						<td style="padding:20px;"><strong>Counian.Matric.Hr.Sec.School</strong></td>
+						<td style="padding-right:40px;"><strong>&emsp;&emsp;Kovilpatti</strong></td>
+						<td><strong>&emsp;&emsp;&emsp;93.5%</strong></td>
+					</tr>
+				</table>
+				<br><br>
+				<tr>
+					<table align="center" border="1">
+						<th colspan="4"><font size="4">Course</font></th>
+						<th><font size="4">College</font></th>
+						<th><font size="4">Place</font></th>
+						<th style="width:160px;"><font size="4">CGPA</font></th><br>
+						<tr>
+							<td colspan="4" style="padding-right:20px;"><strong>Msc Software Systems</strong></td>
+							<td style="padding:20px;"><strong>PSG College of Technology</strong></td>
+							<td style="padding-right:20px;"><strong>&emsp;Coimbatore</strong></td>
+							<td><strong>&emsp;&emsp;&emsp;7.72<br>(upto third Semester)</strong></td>
+						</tr>
+					</table>
+				</tr>
+			</tr>
+		</table>
+		<br>
+		<hr>
+		<table align="center">
+			<tr>
+				<td><font size="6"><u>AREA OF INTEREST</u></font></td><br>
+			</tr>
+			<tr>
+				<td>
+				<br>
+					<ul>
+						<li><a href="#" style="text-decoration:none;"><font size="4">&ensp;&ensp;Hardcore Defence Aspirant</font></a></li><br> 
+						<li><a href="#" style="text-decoration:none;"><font size="4" >&ensp;&ensp;Web Development</font></a></li><br>
+						<li><a href="#" style="text-decoration:none;"><font size="4">&ensp;&ensp;Cryptocurrency Trading</font><a></li>
+					</ul>
+				</td>
+			</tr>
+		</table>
+	</body>
 </html>
