--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 				<td>
 				<br>
 					<ul>
-						<li><a href="\defence.html" style="text-decoration:none;"><font size="4">&ensp;&ensp;Hardcore Defence Aspirant</font></a></li><br> 
+						<li><a href="defence.html" style="text-decoration:none;"><font size="4">&ensp;&ensp;Hardcore Defence Aspirant</font></a></li><br> 
 						<li><a href="#" style="text-decoration:none;"><font size="4" >&ensp;&ensp;Web Development</font></a></li><br>
 						<li><a href="#" style="text-decoration:none;"><font size="4">&ensp;&ensp;Cryptocurrency Trading</font><a></li>
 					</ul>
