--- a/defence.html
+++ b/defence.html
@@ -17,7 +17,7 @@
 	<strong>"Indian Army."</strong><br><br>The seed for the aim of joining the Indian Army was sown by my father who is <u>EX JCO <strong>Naib Subedar(rank) Balamurugan of 84 Armoured corps </strong></u>and my uncles <u><strong>Subedar Ramamoorthy of Military Engineering Service</strong></u> and <u><strong>Havildar Karthikeyan of Army Air Defence</strong></u> and most importantly ,my school senior
 	<u><strong>Lieutenant Naveen of Infantry regiment.</strong></u>Day by day ,seeing their lifestyle in Indian Army ,my fond of becaming a decorated officer in Indian Army grown.
 	</font></p><br>
-	<h1><u><font size="12"><strong>Steps I took to join Indian Army :</strong></font></u></h1><br>
+	<h1><u><font size="12"><strong>Steps I took to join Indian Army :</strong></font></u></h1>
 	<ul>
 	<li><font size="4" style="font-family:'Georgia',serif;font-weight:normal;">Cleared NDA entrance exam for NDA 145 and NDA 146 courses.</font></li>
 	<li><font size="4" style="font-family:'Georgia',serif;font-weight:normal;">Attended SSB interview three times.</font>
@@ -47,8 +47,24 @@
 			<td>34 SSB,Allahabad</td>
 			<td>Screen out</td>
 		</tr>
-	</table>
-				
+		</table>
+		<br>
+		<h1><font size="12"><u><strong>ABOUT  MY PREPARATION FOR NDA ENTRANCE EXAM</u></strong></font><h1>
+		<p><font size="4" style="font-family:'Georgia',serif;font-weight:normal;">I started my preparation for NDA exam in my 12th std itself.I bought some books by referral of some successful candidates of NDA
+		.I gave my first attempt in 17.11.2019 which resulted in failure,I know that i'm not prepared for the exam much.My board exams were completed in 20.03.2020 from which the next day ,the whole country went in 
+		the lockdown.I paid registration fee at a Coaching centre for preparing for the exam,but in vain.The NDA exam which was to suppose to be held on 14.04.2020 was postponed to 06.09.2020.So by the time ,I got much 
+		time for my prepraration.</p>
+		<p font="size="4" style="font-family:'Georgia',serif;font-weight:normal;">I started acing the maths paper by solving previous year questions.Then about the GS paper,I started studying history and geography from 
+		NCERTS books through online pdf.</p>
+		<p font="size="4" style="font-family:'Georgia',serif;font-weight:normal;">I used to study 6-8 hours daily from Monday to Friday and give a mock test in Saturday and in Sunday ,I give myself a complete rest by watching some web series,playing PUBG and so on.
+		I followed this routine from April to mid of July and there came a big hindrance to my preparation ,by the mid of july I became ill with heavy fever,severe throat pain,frequent headache.I suspected it could be Covid but after having
+		tablets and proper medications,my conditions improved.I halted my studies for nearly fifteen days which after that I could barely remember the topics which I covered in GS paper.After a week of revision,I started again my preparations.
+	    </p>
+		<p font="size="4" style="font-family:'Georgia',serif;font-weight:normal;">In between,I applied for Msc Software Systems (integrated for 5 years) course in one of the reputed institution PSG College of Technology,Coimbatore.The college conducted an online interview for the course ,which I eventually got selected at that.But my full focus was at 
+		getting selected for NDA.Finally the D-day came,I went to Madurai to give my NDA exam with full fledged preapration.</p>
+		<p font="size="4" style="font-family:'Georgia',serif;font-weight:normal;">Due to the lockdown,UPSC decided to conduct both the NDA 145 and 146 exams as a common exam which gave me an additional advantage.I gave the exam with full confident.After completing the exam
+		and I cross checked with the answers key of various sources in which I was confident about clearing the exam.By cross checking the answers key,I scored around 400-420 marks .On 5.10.2020 UPSC published the result and I was on cloud nine when I saw my roll number in the list.Meanwhile I apllied for 
+		TES-44 and got the call letter in which my SSB  was alloted in ALLAHABAD centre.I also started my preparation for SSB by watching some YT videos.</p>
 				
 
 	
