--- a/defence.html
+++ b/defence.html
@@ -12,7 +12,7 @@
 	<body style="background-color:skyblue;">
 	</body>
 	<h1><u><font size="12"><strong>Aim of Joining Defence :</strong></font></u></h1>
-	<p style="font-weight:normal;"><font size="4" style="font-family:'Georgia',serif;">Most of our actions are influenced by the path we choose in life,it may be influenced by sports,studies,dance,music,friends,food,hobbies and habits.
+	<p style="font-weight:normal;"><font size="4" style="font-family:'Georgia',serif;">Most of our actions are influenced by the path we choose in life,it may be influenced by sports,studies,dance,music,friends,foods,hobbies and habits.
 	But my life after completing school is influenced by a unique passion which most of us are not awared about it.yes,I have a passion of joining one of the elite security forces in this combat world,
 	<strong>"Indian Army."</strong><br><br>The seed for the aim of joining the Indian Army was sown by my father who is <u>EX JCO <strong>Naib Subedar(rank) Balamurugan of 84 Armoured corps </strong></u>and my uncles <u><strong>Subedar Ramamoorthy of Military Engineering Service</strong></u> and <u><strong>Havildar Karthikeyan of Army Air Defence</strong></u> and most importantly ,my school senior
 	<u><strong>Lieutenant Naveen of Infantry regiment.</strong></u>Day by day ,seeing their lifestyle in Indian Army ,my fond of becaming a decorated officer in Indian Army grown.
@@ -65,7 +65,16 @@
 		<p font="size="4" style="font-family:'Georgia',serif;font-weight:normal;">Due to the lockdown,UPSC decided to conduct both the NDA 145 and 146 exams as a common exam which gave me an additional advantage.I gave the exam with full confident.After completing the exam
 		and I cross checked with the answers key of various sources in which I was confident about clearing the exam.By cross checking the answers key,I scored around 400-420 marks .On 5.10.2020 UPSC published the result and I was on cloud nine when I saw my roll number in the list.Meanwhile I apllied for 
 		TES-44 and got the call letter in which my SSB  was alloted in ALLAHABAD centre.I also started my preparation for SSB by watching some YT videos.</p>
-				
-
+		<p font="size="4" style="font-family:'Georgia',serif;font-weight:normal;">		The preparations for the SSB went very smooth as I used to practise for the screening very much.Daily I used to spend nearly 1 hour for PPDT itself which plays a major role in getting screened in.Also I practised for other tasks such as psychology,GTO and most importantly
+		for personal interview.</p>
+		<h2><font size="12"><u><strong>About my SSB experience</strong></u></h2>
+		<br>
+		<p font="size="4" style="font-family:'Georgia',serif;font-weight:normal;">My seventeen years of waiting from my birth came to an end on 30.10.2020.Yes,I got my SSB call letter which the interview was scheduled on 30.10.2020 but there came an another shocking news also that I was alloted to ALlahabad centre which I know the place only is situated in UP.
+		I dont have an idea of what Iam going to do.Then i told this news to my mom and dad.My dad motivated to attend the interview.Then with a help of one of my uncle who is alos an JCO in Indian Army, I went to Allahabad and gave my first attempt.I know that I was not fully prepared but gave the attempt with full confidence which eventually resulted in screened out.
+		I was numb at that moment but it didnt bothered me as much as it is my first attempt.So I kept motivated me till the next attempt.</p>
+		<p font="size="4" style="font-family:'Georgia',serif;font-weight:normal;">My next SSB for NDA-145 was scheduled on 09.12.2020 at the same ALLAHABAD centre.This time ,my school senior who was currently a officer in Indian Army was actually on leave during his traning year at OTA,chennai.With the insights from him,I rectified a lot from my preivious attempt.
+		I worked on my narration and story writing skills.With a great confidence and motivation ,I gave my second attempt at the 14_SSB board which rejected me at previous attempt.But this time,I gave my narration and discussion well in the group which eventually lead to screened in.That moment,when I cant express my happiness,my tears came out drops by drops.
+		I informed my mom and dad and most importantly to my school senior Lt.Naveen.
+		
 	
 </html>
