--- a/defence.html
+++ b/defence.html
@@ -53,7 +53,7 @@
 		<p><font size="4" style="font-family:'Georgia',serif;font-weight:normal;">I started my preparation for NDA exam in my 12th std itself.I bought some books by referral of some successful candidates of NDA
 		.I gave my first attempt in 17.11.2019 which resulted in failure,I know that i'm not prepared for the exam much.My board exams were completed in 20.03.2020 from which the next day ,the whole country went in 
 		the lockdown.I paid registration fee at a Coaching centre for preparing for the exam,but in vain.The NDA exam which was to suppose to be held on 14.04.2020 was postponed to 06.09.2020.So by the time ,I got much 
-		time for my prepraration.</p>
+		time for my prepraration.</font></p>
 		<p font="size="4" style="font-family:'Georgia',serif;font-weight:normal;">I started acing the maths paper by solving previous year questions.Then about the GS paper,I started studying history and geography from 
 		NCERTS books through online pdf.</p>
 		<p font="size="4" style="font-family:'Georgia',serif;font-weight:normal;">I used to study 6-8 hours daily from Monday to Friday and give a mock test in Saturday and in Sunday ,I give myself a complete rest by watching some web series,playing PUBG and so on.
@@ -67,14 +67,14 @@
 		TES-44 and got the call letter in which my SSB  was alloted in ALLAHABAD centre.I also started my preparation for SSB by watching some YT videos.</p>
 		<p font="size="4" style="font-family:'Georgia',serif;font-weight:normal;">		The preparations for the SSB went very smooth as I used to practise for the screening very much.Daily I used to spend nearly 1 hour for PPDT itself which plays a major role in getting screened in.Also I practised for other tasks such as psychology,GTO and most importantly
 		for personal interview.</p>
-		<h2><font size="12"><u><strong>About my SSB experience</strong></u></h2>
+		<h2><font size="12"><u><strong>About my SSB experience</strong></u></font></h2>
 		<br>
 		<p font="size="4" style="font-family:'Georgia',serif;font-weight:normal;">My seventeen years of waiting from my birth came to an end on 30.10.2020.Yes,I got my SSB call letter which the interview was scheduled on 30.10.2020 but there came an another shocking news also that I was alloted to ALlahabad centre which I know the place only is situated in UP.
 		I dont have an idea of what Iam going to do.Then i told this news to my mom and dad.My dad motivated to attend the interview.Then with a help of one of my uncle who is alos an JCO in Indian Army, I went to Allahabad and gave my first attempt.I know that I was not fully prepared but gave the attempt with full confidence which eventually resulted in screened out.
 		I was numb at that moment but it didnt bothered me as much as it is my first attempt.So I kept motivated me till the next attempt.</p>
 		<p font="size="4" style="font-family:'Georgia',serif;font-weight:normal;">My next SSB for NDA-145 was scheduled on 09.12.2020 at the same ALLAHABAD centre.This time ,my school senior who was currently a officer in Indian Army was actually on leave during his traning year at OTA,chennai.With the insights from him,I rectified a lot from my preivious attempt.
 		I worked on my narration and story writing skills.With a great confidence and motivation ,I gave my second attempt at the 14_SSB board which rejected me at previous attempt.But this time,I gave my narration and discussion well in the group which eventually lead to screened in.That moment,when I cant express my happiness,my tears came out drops by drops.
-		I informed my mom and dad and most importantly to my school senior Lt.Naveen.
+											 I informed my mom and dad and most importantly to my school senior Lt.Naveen.</p>
 		
 	
 </html>
