--- a/defence.html
+++ b/defence.html
@@ -74,8 +74,8 @@
 		I was numb at that moment but it didnt bothered me as much as it is my first attempt.So I kept motivated me till the next attempt.</p>
 		<p font="size="4" style="font-family:'Georgia',serif;font-weight:normal;">My next SSB for NDA-145 was scheduled on 09.12.2020 at the same ALLAHABAD centre.This time ,my school senior who was currently a officer in Indian Army was actually on leave during his traning year at OTA,chennai.With the insights from him,I rectified a lot from my preivious attempt.
 		I worked on my narration and story writing skills.With a great confidence and motivation ,I gave my second attempt at the 14_SSB board which rejected me at previous attempt.But this time,I gave my narration and discussion well in the group which eventually lead to screened in.That moment,when I cant express my happiness,my tears came out drops by drops.
-											 I informed my mom and dad and most importantly to my school senior Lt.Naveen.</p>
-											 
+											 I informed my mom and dad and most importantly to my school senior Lt.Naveen of Infantry .</p>
+
 		
 	
 </html>
